objects/Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Add additional owners for an action</description>
        <inlineHelpText>Add additional owners for an action</inlineHelpText>
        <label>Action</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipLabel>Additional Owners</relationshipLabel>
        <relationshipName>Team_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link team member to different deployment and detail start &amp; end dates</description>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Team Member</relationshipLabel>
        <relationshipName>Team_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Used to indicate the end date of the team member for the deployment or the release</description>
        <inlineHelpText>Please enter an end date for this team member</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link team member to user record and display any useful information such as phone, email and business hours back on the team member object</description>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Indicates phone number stored on user record</description>
        <formula>Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates phone number stored on user record</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Team Member</relationshipLabel>
        <relationshipName>Team_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application Design Architect</fullName>
                </value>
                <value>
                    <fullName>Business domain expert - CCC</fullName>
                </value>
                <value>
                    <fullName>Business domain expert - I2P</fullName>
                </value>
                <value>
                    <fullName>Business domain expert - Sales</fullName>
                </value>
                <value>
                    <fullName>Business domain expert - Services</fullName>
                </value>
                <value>
                    <fullName>Business Process Owner</fullName>
                </value>
                <value>
                    <fullName>Business solution Analyst</fullName>
                </value>
                <value>
                    <fullName>Champions</fullName>
                </value>
                <value>
                    <fullName>Change Manager / Analyst</fullName>
                </value>
                <value>
                    <fullName>COE Manager / Contact</fullName>
                </value>
                <value>
                    <fullName>Consulting Engagement Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Success Manager</fullName>
                </value>
                <value>
                    <fullName>Developer / Configurator</fullName>
                </value>
                <value>
                    <fullName>Entity Business Owner</fullName>
                </value>
                <value>
                    <fullName>Entity Data Steward</fullName>
                </value>
                <value>
                    <fullName>Entity Delegated Administrator</fullName>
                </value>
                <value>
                    <fullName>Entity Deployment Manager</fullName>
                </value>
                <value>
                    <fullName>Entity IT Manager</fullName>
                </value>
                <value>
                    <fullName>Global Data Steward</fullName>
                </value>
                <value>
                    <fullName>Global Deployment Manager</fullName>
                </value>
                <value>
                    <fullName>Global Trainers</fullName>
                </value>
                <value>
                    <fullName>Interface Architect / Developer</fullName>
                </value>
                <value>
                    <fullName>IPO Region Support</fullName>
                </value>
                <value>
                    <fullName>Local IPO (connectors)</fullName>
                </value>
                <value>
                    <fullName>Local Trainers</fullName>
                </value>
                <value>
                    <fullName>Process Advocates</fullName>
                </value>
                <value>
                    <fullName>Project manager</fullName>
                </value>
                <value>
                    <fullName>Regional Deployment Manager</fullName>
                </value>
                <value>
                    <fullName>Solution Architect</fullName>
                </value>
                <value>
                    <fullName>Solution Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The start date of the team member</description>
        <inlineHelpText>Please enter the start date for this team member</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TEAM-{000}</displayFormat>
        <label>Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>